--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,9 +1,9 @@
-<link href="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/smart_wizard.min.css" rel="stylesheet"
-  type="text/css" />
-<div class="container">
-  <button type="button" class="btn btn-primary" (click)="recebeHash()">xx</button>
+<!-- <link href="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/smart_wizard.min.css" rel="stylesheet"
+  type="text/css" /> -->
+<div class="container mt-5">
+  <!-- <button type="button" class="btn btn-primary" (click)="recebeHash()">xx</button>
   <div class="row d-flex justify-content-center mt-200"> <button type="button" class="btn btn-primary"
-      data-toggle="modal" data-target="#exampleModal"> Launch multistep Wizard </button> </div>
+      data-toggle="modal" data-target="#exampleModal"> Launch multistep Wizard </button> </div> -->
 
   <div class="container">
     <div class="row clearfix">
@@ -11,19 +11,15 @@
         <div class="card product_item">
           <div class="body">
             <div class="cp_img">
-              <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="Product" class="img-fluid">
+              <img src="https://images-americanas.b2w.io/produtos/01/00/img/128513/4/128513420_1GG.jpg" alt="Product" class="img-fluid" style="cursor: pointer;">
               <div class="hover">
-                <a href="javascript:void(0);" class="btn btn-primary btn-sm waves-effect"><i
-                    class="zmdi zmdi-plus"></i></a>
-                <a href="javascript:void(0);" class="btn btn-primary btn-sm waves-effect"><i
-                    class="zmdi zmdi-shopping-cart"></i></a>
+                <a href="javascript:void(0);" class="btn btn-primary btn-sm waves-effect">Adicionar</a>
               </div>
             </div>
             <div class="product_details">
-              <h5><a href="ec-product-detail.html">Simple Black Clock</a></h5>
+              <h5><a href="javascript:void(0)" (click)="lgModal.show()">Pacote 50 unidades P</a></h5>
               <ul class="product_price list-unstyled">
-                <li class="old_price">$16.00</li>
-                <li class="new_price">$13.00</li>
+                <li class="old_price">R$ 35,00</li>
               </ul>
             </div>
           </div>
@@ -343,39 +339,72 @@
 </div>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/bbbootstrap/libraries@main/jquery.smartWizard.min.js">
 </script>
-<script type="text/javascript">
-  var checkout = new DirectCheckout('970969AAD6BB843AE46EFEAC3022022BC7C8856109F8CD7E8796C2969FEE423D', false);
-  /* Em sandbox utilizar o construtor new DirectCheckout('PUBLIC_TOKEN', false); */
 
-  function generateHash() {
-    var cardData = {
-      cardNumber: '5579006606178504',
-      holderName: 'Nome do Titular do Cartão',
-      securityCode: '123',
-      expirationMonth: '12',
-      expirationYear: '2045'
-    };
-
-    checkout.getCardHash(cardData, function (cardHash) {
-      /* Sucesso - A variável cardHash conterá o hash do cartão de crédito */
-      recebeHash(cardHash, null);
-    }, function (error) {
-      /* Erro - A variável error conterá o erro ocorrido ao obter o hash */
-      recebeHashError(null, error);
-    });
-  };
-
-  $(document).ready(function () {
-
-    $('#smartwizard').smartWizard({
-      selected: 0,
-      theme: 'arrows',
-      autoAdjustHeight: true,
-      transitionEffect: 'fade',
-      showStepURLhash: false,
-
-    });
-
-  });
-
-</script>
+<p>Small modal window have small width on screens only above 768px(boostrap3) and 576px(bootstrap4)</p>
+<button class="btn btn-primary" (click)="lgModal.show()">Large modal</button>
+ 
+<div bsModal #lgModal="bs-modal" class="modal fade" tabindex="-1"
+     role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-sizes-name1" class="modal-title pull-left">Large modal</h4>
+        <button type="button" class="close pull-right" (click)="lgModal.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div id="smartwizard">
+            <ul>
+              <li><a href="#step-1">Step 1<br /><small>Account Info</small></a></li>
+              <li><a href="#step-2">Step 2<br /><small>Personal Info</small></a></li>
+              <li><a href="#step-3">Step 3<br /><small>Payment Info</small></a></li>
+              <li><a href="#step-4">Step 4<br /><small>Confirm details</small></a></li>
+            </ul>
+            <div class="mt-4">
+              <div id="step-1">
+                <div class="row">
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Name" required> </div>
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Email" required> </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Password" required> </div>
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Repeat password" required>
+                  </div>
+                </div>
+              </div>
+              <div id="step-2">
+                <div class="row">
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Address" required> </div>
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="City" required> </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="State" required> </div>
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Country" required> </div>
+                </div>
+              </div>
+              <div id="step-3" class="">
+                <div class="row">
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Card Number" required>
+                  </div>
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Card Holder Name"
+                      required> </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="CVV" required> </div>
+                  <div class="col-md-6"> <input type="text" class="form-control" placeholder="Mobile Number" required>
+                  </div>
+                </div>
+              </div>
+              <div id="step-4" class="">
+                <div class="row">
+                  <div class="col-md-12"> <span>Thanks For submitting your details with BBBootstrap.com. we will send
+                      you a confirmation email. We will review your details and revert back.</span> </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
